--- a/src/style.css
+++ b/src/style.css
@@ -25,8 +25,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  /* display: flex; */
+  /* place-items: center; */
+  padding: 2em;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -36,32 +37,16 @@ h1 {
   line-height: 1.1;
 }
 
+code {
+  font-size: 1.3em;
+}
+
 #app {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+li {
+  margin: 0.7em 0;
 }
 
 button {
